--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1{
    
 }
 nav{
-    border: 1px solid white;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,7 +87,7 @@ ul {
     gap: 5vh;
     padding: 15px;
     margin: 20px 0;
-    border: 1px solid white;
+
     background-color: #1b1b23;
     align-self: center;
     width: fit-content;
@@ -119,48 +119,55 @@ main {
 
 .conteiner {
     display: grid; /* Define como grid */
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    gap: 10px; 
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5vw; 
     width: 95%;  
     justify-content: center;
 
-    border: 1px solid white;
+   
    
 }
 
 .square {
-    
-    display: flex;
-    flex-direction: row;
-    
-    background-color: #1b1b23;
-    margin: 10px;
+    position: relative; /* Necessário para posicionar o conteúdo filho */
+    width: fit-content; /* Garante que o tamanho seja baseado no conteúdo */
     border-radius: 15px;
-    overflow: hidden; /* Garante que o conteúdo não saia dos limites */
+    overflow: hidden;
+
 }
 
 .card {
-    flex: 0 0 43%;  /* A imagem ocupará 43% da largura da .square */
-    aspect-ratio: 2 / 3; /* Mantém a proporção 2:3 */
-    
+    aspect-ratio: 2 / 3; /* Mantém a proporção da imagem */
 }
 
 .card img {
     width: 100%; 
-    height: 100%; 
+    height: auto; 
     object-fit: cover; /* Garante que a imagem preencha o espaço sem distorcer */
-    overflow: hidden; 
 }
 
 .desc {
-    width: 57%;  
-    padding: 1vw; 
-    font-size: 100%; 
-    
+    position: absolute; /* Coloca a descrição sobre a imagem */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Fundo semi-transparente */
+    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    align-items: center;
+    opacity: 0; /* Invisível por padrão */
+    transition: opacity 0.3s ease; /* Transição suave */
+    
+    padding-right: 1vw;
+}
+.desc article{
+    width: 90%;
+}
+.square:hover .desc {
+    opacity: 1; /* Visível ao passar o mouse */
 }
 footer{
     height: 8vh;
