--- a/detail.css
+++ b/detail.css
@@ -69,24 +69,36 @@ html{
     font-family: var(--ff-dm-sans);
     font-size: 10px;
     scroll-behavior: smooth;
+
 }
 body{
     background: var(--background);
     color: var(--on-background);
     font-size: var(--fs-body);
     line-height: 1.5;
-    overflow: hidden;
+
 }
+
+::-webkit-scrollbar {
+    width: 5px; 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--banner-background); 
+    border-radius: var(--radius-8); 
+}
+
+::-webkit-scrollbar-track-piece {
+    color: transparent; 
+}
+
 iframe{
     width: 100%;
     height: 100%;
 }
 
 
-::-webkit-scrollbar-thumb{
-    background-color: var(--banner-background);
-    border-radius: var(--radius-8);
-}
+
 
 /* BANNER AND REUSED STYLE */
 .img-cover, .heading, .title-large{
@@ -211,7 +223,7 @@ iframe{
     background-color: var(--banner-background);
     border-radius: var(--radius-8);
 }
-.detail-box::-webkit-scrollbar {width: 10px;}
+.detail-box::-webkit-scrollbar {width: 1.6vh;}
 .detail-box::-webkit-scrollbar-track-piece {color: transparent;}
 
 .detail-content .meta-list{
@@ -245,9 +257,7 @@ iframe{
     border-radius: var(--radius-8);
 }
 
-.detail-box .slider-list{
-    margin-bottom: 0px;
-}
+
 .video-list{
     position: relative;
     overflow-x: overlay;
@@ -256,7 +266,7 @@ iframe{
     background: var(--banner-background);
     border-radius: var(--radius-8);
 }
-.video-list::-webkit-scrollbar {height: 10px;}
+.video-list::-webkit-scrollbar {height: 1.6vh;}
 .video-list::-webkit-scrollbar-track-piece {color: transparent;}
 .video-inner{
     position: relative;
@@ -279,8 +289,85 @@ iframe{
 }
 
 
+.title-large {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+
+.slider-list {
+    display: flex;
+    overflow-x: auto;
+    
+}
+
+.slider-inner {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 3vh;
+}
+
+.movie-card{
+    min-width: 180px;
+    width: 11.5vw;
+    display: flex;
+    align-items: center; /* Alinha os filhos no centro horizontalmente */
+    
+}
+
+.card-btn {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+
+.poster-box {
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+
+.card-banner {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.img-cover {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+}
+
+.card-wrapper{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.list{ 
+    padding-block-start: 32px; 
+    padding-bottom: 80px;
+}
+.card-wrapper .title{
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    padding-top: 10px;
+    font-size: 15px;
+    line-height: 20px;
+    
+    width: 96%;
+    -webkit-line-clamp: 1;
+}
+.slider-list::-webkit-scrollbar {width: 1.6vh;}
+.slider-list::-webkit-scrollbar-track-piece {color: transparent;}
+
+
+
+
 @media (max-width: 900px){
-    figure{
+    .movie-detail figure{
         display: none;
     }
     .detail-box{
@@ -288,9 +375,11 @@ iframe{
         width: 90vw;
         
     }
+    .detail-box{
+        margin: 0;
+        width: 100%;
+    }
     .container-detail{
-
-        padding-left: 0;
-       
+        padding-left: 2.5vh;
     }
 }
